src/main/kotlin/nl/shadowlink/mission/plugin/gta3script/gta3script.bnf
{
    parserClass="nl.shadowlink.mission.plugin.gta3script.parser.Gta3ScriptParser"
    parserUtilClass="nl.shadowlink.mission.plugin.gta3script.parser.Gta3ScriptParserUtil"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Gta3Script"
    psiImplClassSuffix="Impl"
    psiPackage="nl.shadowlink.mission.plugin.gta3script.psi"
    psiImplPackage="nl.shadowlink.mission.plugin.gta3script.psi.impl"

    elementTypeHolderClass="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptTypes"
    elementTypeClass="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptElementType"
    tokenTypeClass="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptTokenType"

    psiImplUtilClass="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptUtils"

  tokens=[
    NEW_LINE="regexp:\\n"
    WHITE_SPACE='regexp:\\s+'
    NUMBER='regexp:-?\d+(\.\d*)?'
    COMMENT='regexp://.*'
    COMMENT_BLOCK='regexp:\/\*(\*(?!\/)|[^*])*\*\/'

    // Reserved words
    MISSION_START='MISSION_START'
    MISSION_END='MISSION_END'
    SCRIPT_START='SCRIPT_START'
    SCRIPT_END='SCRIPT_END'
    WHILE = 'WHILE'
    END_WHILE = 'ENDWHILE'
    IF = 'IF'
    END_IF = 'ENDIF'
    ELSE = 'ELSE'
    AND = 'AND'
    OR = 'OR'
    RETURN = 'RETURN'
    SET = 'SET'
    NOT = 'NOT'
    ON = 'ON'
    OFF = 'OFF'
    TRUE = 'TRUE'
    FALSE = 'FALSE'
    FADE_IN = 'FADE_IN'
    FADE_OUT = 'FADE_OUT'
    GOSUB = 'GOSUB'
    GOTO = 'GOTO'
    LAUNCH_MISSION = 'LAUNCH_MISSION'
    LOAD_AND_LAUNCH_MISSION = 'LOAD_AND_LAUNCH_MISSION'
    START_NEW_SCRIPT = 'START_NEW_SCRIPT'

    IDENTIFIER='regexp:\$?[a-zA-Z0-9_.@&]+'

    COLON=':'

    OP_PLUS_PLUS='++'
    OP_PLUS='+'
    OP_MINUS_MINUS='--'
    OP_MINUS='-'
    OP_TIMES='*'
    OP_DIVISION='/'
    OP_LESS_THAN='<'
    OP_LESS_THAN_OR_EQUAL='<='
    OP_GREATER_THAN='>'
    OP_GREATER_THAN_OR_EQUAL='>='
    EQUALS='='
  ]
}

root ::= expression*
expression ::= (line_break | variable_definition | variable_assignment | label_definition | subroutine_call | method_call | mission_block | if_expression | while_expression | math_operation | label_return | cast_assignment | local_scope | MISSION_END | goto_call | launch_mission_call | start_new_script_call | script_start_expression | SCRIPT_END)

script_start_expression ::= SCRIPT_START

mission_block ::= MISSION_START expression*

subroutine_call ::= GOSUB label line_break

launch_mission_call ::= (LAUNCH_MISSION | LOAD_AND_LAUNCH_MISSION) script_reference
script_reference ::= IDENTIFIER {
    mixin="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptNamedElementImpl"
    implements="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptNamedElement"
    methods=[getName setName getNameIdentifier getReference]
}

start_new_script_call ::= START_NEW_SCRIPT label Param* line_break

goto_call ::= GOTO label line_break

label_definition ::= label_decl COLON line_break
label_decl ::= IDENTIFIER  {
    mixin="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptLabelDeclElementImpl"
    implements="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptLabelDeclElement"
    methods=[getName setName getNameIdentifier getReference]
    stubClass="nl.shadowlink.mission.plugin.gta3script.indexing.LabelDeclStub"
    elementTypeFactory="nl.shadowlink.mission.plugin.gta3script.indexing.LabelDeclStubElementType.getInstance"
}
label ::= IDENTIFIER  {
    mixin="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptNamedElementImpl"
    implements="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptNamedElement"
    methods=[getName setName getNameIdentifier getReference]
}
label_return ::= RETURN

local_scope ::= '{' local_scope_body '}'
local_scope_body ::= expression*

variable_assignment ::= variable '=' (IDENTIFIER | NUMBER | Boolean) line_break
math_operation ::= (increment_pre_operation | increment_post_operation | math_operation_assignment | math_operation_self_assignment)
math_operator ::= OP_PLUS | OP_MINUS | OP_TIMES | OP_DIVISION
math_operation_assignment ::= variable EQUALS (variable | NUMBER) math_operator (variable | NUMBER)
math_operation_self_assignment ::= variable math_operator EQUALS (variable | NUMBER)
increment_pre_operation ::= (OP_PLUS_PLUS | OP_MINUS_MINUS) variable line_break
increment_post_operation ::= variable (OP_PLUS_PLUS | OP_MINUS_MINUS) line_break
cast_assignment ::= variable EQUALS '#' variable line_break

method_call ::= method_name MethodParamList line_break
method_name ::= IDENTIFIER

variable_definition ::= Type variable_decl (','? variable_decl)* line_break
variable_decl ::= IDENTIFIER {
    mixin="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptVariableDeclElementImpl"
    implements="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptVariableDeclElement"
    methods=[getName setName getNameIdentifier getReference]
    stubClass="nl.shadowlink.mission.plugin.gta3script.indexing.VariableDeclStub"
    elementTypeFactory="nl.shadowlink.mission.plugin.gta3script.indexing.VariableDeclStubElementType.getInstance"
}
variable ::= IDENTIFIER {
    mixin="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptNamedElementImpl"
    implements="nl.shadowlink.mission.plugin.gta3script.psi.Gta3ScriptNamedElement"
    methods=[getName setName getNameIdentifier getReference]
}
line_break ::= NEW_LINE

if_expression ::= IF condition_list condition_body (ELSE condition_body)? END_IF line_break
while_expression ::= WHILE condition_list condition_body END_WHILE line_break
and_condition ::= AND condition
or_condition ::= OR condition
condition_list ::= condition (and_condition | or_condition)*
condition_body ::= expression*
condition ::= NOT? (method_call | comparison)
comparison ::= Param ComparisonOperator Param line_break

Type ::= VAR_INT | VAR_FLOAT | LVAR_INT | LVAR_FLOAT

MethodParamList ::= MethodParamDefinition?
MethodParamDefinition ::= Param MethodParamDefinition? | '(' Param* ')' MethodParamDefinition?

Param ::= NUMBER | variable | SUBROUTINE | Boolean | GxtReference
GxtReference ::= '(' IDENTIFIER ')'
Boolean ::= TRUE | FALSE | ON | OFF
ComparisonOperator ::= OP_LESS_THAN | OP_GREATER_THAN | OP_GREATER_THAN_OR_EQUAL | OP_LESS_THAN_OR_EQUAL | EQUALS
